2010-08-06  Patrice Dumas  <pertusus@free.fr>

	* texi2html/Makefile.am: generate AUTHORS based on texinfo AUTHORS
	and copy config.rpath.
	* texi2html/texi2html.pl (locate_init_file): explicitly give the
	directories in argument.
	* texi2html/texi2html.init, texi2html/T2h_l2h.pm: no default 
	initialization file for latex2html.  Don't use locate_init_file to 
	find the initialization file.

2010-08-05  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Loading Init Files),
	(Init File Basics): shorten names.
	(Init File Variables, Init File Variables): split off from Basics.

2010-08-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Setting and Getting Configuration Variables):
	capitalize+edit.

2010-08-02  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Initialization File Basics): capitalize+edit.

2010-08-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Loading Initialization Files): capitalize+edit.

2010-08-01  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl (set_variable),
	(get_conf): accept an undef value as a regular value.
	(unset_variable),
	(unset_from_document): unset a variable by removing the 
	corresponding key from the hash.  Replaces set_variable($var, undef)
	now that undef is a regular value.  Done for a report from Karl.
	* texi2html/texi2html.init (t2h_default_select_substitution):
	Simplify.
	* texi2html/test/run_test*.sh: set --error-limit=1000 to avoid
	failing tests because of the default error limit.

2010-07-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Internationalization of Strings): edit node,
	including re-capitalization.
	(Info Format Regular Nodes): mention that periods, etc., cannot be
	used in Info identifiers.

2010-07-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (texiany Output Customization, makeinfo
	Configuration Variables): slightly reword incompatibility warnings.

2010-07-27  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.pl: use the actual values for defaults